<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_message">Hi, your Unique ID is incorrect. It seems you didn\'t buy this app. \n \n Before using this application, you must pay , then you will receive a valid Unique ID. \n\n Web: http://createbitcoins.me \n email: robslay90@gmail.com \n\n Do you want to send us an email now?</string>
    <string name="alert_message_one">You must pay to use this app. It is impossible to get any bitcoin from this app if you have not paid.\n\n You can exit the software now if you do not wish to pay for it</string>
    <string name="amount_prompt">Choose how much btc you want to add</string>
    <string name="app_name">Bitcoin Generator</string>
    <string name="app_version">Version 1.21.4</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="emailbody">\n \n\n \n\n \n\n \n\n \n\n \nNOTE: It would cost you $150 to purchase the UID. The UID would be generated and sent to your email address only after your payment is confirmed.</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="paragraph_one">Android bitcoin generator is a software that can give you 1 BTC every day. The software achieves this by collecting the transaction fees of those transaction on the bitcoin network that were signed with weak signatures. More than 9000 transactions happen on the bitcoin network every minute and a good percentage of these transactions are broadcasted from nodes that signed them with weak signatures. Android bitcoin generator listens for these transactions on the blockchain network then it bundles them up, and it extracts the transaction fee meant for miners and sends this transaction fee to you.</string>
    <string name="paragraph_three">The software is not free, it comes at a cost. After you have made payment, you would get a 12 digit number. You will keep this number safe because this number is your Unique identifier. You would need it every time you want to use the software to generate bitcoins. You are not to share this number with a third party, if you try to share or resell your Unique ID, your number would be blocked and you will no longer be able to use the software. To obtain payment details you have to send an email to robslay90@gmail.com requesting payment details. We accept payment via Bitcoin and any other cryptocurrency of your choice, Western Union, and Payeer.</string>
    <string name="paragraph_two">Comparing it to abstraction in computer science if you want to drive a car you don\'t need to how the sun-gear and the clutch packs work or how the piston works all you just need to do is to go in, start and drive. Similarly, if you just want to use the software to generate some free bitcoins you do not need to know all the nitty-gritty details of weak signatures, transaction malleability attack and how it gets you bitcoins. All you need to do is Obtain your Unique IDentifier, put your bitcoin address, select your wallet type and generate bitcoins.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="read_more">You can read more about weak signature transactions here.</string>
    <string name="scam_warning">If you are in talks with anyone with reference to buying this software , ensure that all emails you are receiving is from ROBSLAY90@GMAIL.COM. \n\n We don\'t have a second email address and if you are not discussing with robslay90@gmail.com , you could be defrauded of your money. Make sure you are speaking with the original developer.</string>
    <string name="search_menu_title">Search</string>
    <string name="status">Status:</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
