<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout" android:background="@color/white" android:paddingLeft="16dp" android:paddingTop="8dp" android:paddingRight="16dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="50dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/about_logo"/>
        <TextView android:textSize="22sp" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginBottom="51dp" android:text="Android Bitcoin Generator" app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintStart_toEndOf="@+id/imageView"/>
        <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="199dp" android:text="@string/paragraph_one" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/read_more" app:layout_constraintBottom_toTopOf="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/textView11"/>
        <TextView android:autoLink="all" android:id="@+id/textView6" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="87dp" android:text="https://www.coindesk.com/open-source-tool-identifies-weak-bitcoin-wallet-signatures" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
        <TextView android:autoLink="all" android:id="@+id/textView11" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="https://bitcointalk.org/index.php?topic=271486.0/" app:layout_constraintBottom_toTopOf="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView6"/>
        <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/paragraph_two" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
        <TextView android:textColor="@color/black" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="HOW TO GET YOUR UNIQUE ID" app:layout_constraintBottom_toTopOf="@+id/textView9" app:layout_constraintStart_toStartOf="@+id/textView9"/>
        <TextView android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="59dp" android:text="@string/paragraph_three" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
        <TextView android:textColor="#bbbbbb" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="63dp" android:text="@string/app_version" app:layout_constraintStart_toEndOf="@+id/imageView" app:layout_constraintTop_toTopOf="@+id/imageView"/>
        <TextView android:textColor="@color/black" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12dp" android:text="MAKE YOUR PHONE WORK FOR YOU" app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintEnd_toStartOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.6" app:layout_constraintStart_toStartOf="@+id/textView4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
